# Abrams-Tiny-Term

./: CMakeLists.txt  LICENCE  README.MD  main.cpp
docs/: documentation.md
include/: ascii_font.h  paths.h  paths.h.in  terminal.h
media/: defaults.conf
media/fonts/: tom-thumb.bdf  tom-thumb.bdf:Zone.Identifier
media/themes/: gruvbox-dark
src/: ascii_font.cpp  main.cpp  terminal.cpp
